--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,13 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    
+        
+    # secret 파일 로딩
+    - uses: actions/checkout@v3
+    - run: touch ./src/main/resources/application-dev.properties
+    - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application-dev.properties
+    - run: cat ./src/main/resources/application-dev.properties
+      
     # Gradle 권한 설정
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
