--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source:  /                        # source: 인스턴스에 복사할 디렉터리 경로
-    destination: /home/ubuntu/jaeju   # destination: 인스턴스에서 파일이 복사되는 위치
+    destination: /home/ubuntu/app     # destination: 인스턴스에서 파일이 복사되는 위치
     overwrite: yes                    # overwrite: 복사할 위치에 파일이 있는 경우 대체
 
 permissions:
