--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ name: CI Practice
 on:
   pull_request:
     branches: [ "main" ]
+  push:
+    branches: ["dev"]
 
 permissions:
   contents: read
@@ -35,6 +37,16 @@ jobs:
     - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application-dev.properties
     - run: cat ./src/main/resources/application-dev.properties
       
+    # Gradle 캐싱
+    - name: Gradle Caching
+      uses: actions/cache@v3
+      with:
+        path: |  
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+            ${{ runner.os }}-gradle-
       
     # Gradle 권한 설정
     - name: Grant execute permission for gradlew
